manifests/traefik-configs/amoro.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: amoro
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`amoro.ig.ingtra.net`)
      services:
        - kind: Service
          name: amoro-rest
          namespace: amoro
          port: 1630
  tls:
    secretName: ig-ingtra-net-tls
