manifests/traefik-configs/clearml.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: clearml
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`clearml.ig.ingtra.net`)
      services:
        - kind: Service
          name: clearml-webserver
          namespace: clearml
          port: 8080
  tls:
    secretName: ig-ingtra-net-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: clearml
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`clearml-api.ig.ingtra.net`)
      services:
        - kind: Service
          name: clearml-api
          namespace: clearml
          port: 8008
  tls:
    secretName: ig-ingtra-net-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: clearml
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`clearml-file.ig.ingtra.net`)
      services:
        - kind: Service
          name: clearml-fileserver
          namespace: clearml
          port: 8081
  tls:
    secretName: ig-ingtra-net-tls
