manifests/traefik-configs/coder.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`coder.ig.ingtra.net`) || Host(`cdr.ing.gg`)
      services:
        - kind: Service
          name: coder
          namespace: coder
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
