manifests/traefik-configs/comfy-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: comfy-ui
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`comfy-ui.ig.ingtra.net`)
      services:
        - kind: Service
          name: comfy-ui
          namespace: comfy-ui
          port: 8080
  tls:
    secretName: ig-ingtra-net-tls
