manifests/traefik-configs/dagster.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dagster
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dagster.ig.ingtra.net`)
      services:
        - kind: Service
          name: dagster-dagster-webserver
          namespace: dagster
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
