manifests/traefik-configs/filestash.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filestash
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`filestash.ig.ingtra.net`)
      services:
        - kind: Service
          name: filestash
          namespace: filestash
          port: 8334
  tls:
    secretName: ig-ingtra-net-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filestash-wopi
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`filestash-wopi.ig.ingtra.net`)
      services:
        - kind: Service
          name: filestash-wopi
          namespace: filestash
          port: 9980
  tls:
    secretName: ig-ingtra-net-tls
