manifests/traefik-configs/igobara.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: igobara
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`igobara.ig.ingtra.net`)
      services:
        - kind: Service
          name: admin
          namespace: igobara
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
