manifests/traefik-configs/immich.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`immich.ig.ingtra.net`)
      services:
        - kind: Service
          name: immich-server
          namespace: immich
          port: 2283
  tls:
    secretName: ig-ingtra-net-tls
