manifests/traefik-configs/kubero.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubero
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kubero.ig.ingtra.net`)
      services:
        - kind: Service
          name: kubero
          namespace: kubero
          port: 2000
  tls:
    secretName: ig-ingtra-net-tls
