manifests/traefik-configs/lakekeeper.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lakekeeper
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lakekeeper.ig.ingtra.net`)
      services:
        - kind: Service
          name: lakekeeper
          namespace: lakekeeper
          port: 8181
  tls:
    secretName: ig-ingtra-net-tls
