manifests/traefik-configs/ledger-api.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ledger-api
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ledger-api.ig.ingtra.net`)
      services:
        - kind: Service
          name: ledger-api
          namespace: sadang2house
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
