manifests/traefik-configs/linkerd-viz.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkerd-viz
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`linkerd-viz.ig.ingtra.net`)
      services:
        - kind: Service
          name: web
          namespace: linkerd
          port: 8084
  tls:
    secretName: ig-ingtra-net-tls
