manifests/traefik-configs/llama-cpp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: llama-cpp-models
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`llama-cpp.ig.ingtra.net`) && PathPrefix(`/qwen3-embedding-0-6b`)
      services:
        - kind: Service
          name: qwen3-embedding-0-6b
          namespace: llm-serving
          port: 8080
      middlewares:
        - name: llama-cpp-stripprefix
    - kind: Rule
      match: Host(`llama-cpp.ig.ingtra.net`) && PathPrefix(`/qwen3-embedding-0.6b`)
      services:
        - kind: Service
          name: qwen3-embedding-0-6b
          namespace: llm-serving
          port: 8080
      middlewares:
        - name: llama-cpp-stripprefix
    - kind: Rule
      match: Host(`llama-cpp.ig.ingtra.net`) && PathPrefix(`/smollm3-3b`)
      services:
        - kind: Service
          name: smollm3-3b
          namespace: llm-serving
          port: 8080
      middlewares:
        - name: llama-cpp-stripprefix
    - kind: Rule
      match: Host(`llama-cpp.ig.ingtra.net`) && PathPrefix(`/lfm2-1.2b`)
      services:
        - kind: Service
          name: lfm2-1-2b
          namespace: llm-serving
          port: 8080
      middlewares:
        - name: llama-cpp-stripprefix
    - kind: Rule
      match: Host(`llama-cpp.ig.ingtra.net`) && PathPrefix(`/gemma-3n-2eb`)
      services:
        - kind: Service
          name: gemma-3n-2eb
          namespace: llm-serving
          port: 8080
      middlewares:
        - name: llama-cpp-stripprefix
  tls:
    secretName: ig-ingtra-net-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: llama-cpp-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /qwen3-embedding-0-6b
      - /qwen3-embedding-0.6b
      - /smollm3-3b
      - /lfm2-1.2b
      - /gemma-3n-2eb
