manifests/traefik-configs/local-ai.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: local-ai
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`local-ai.ig.ingtra.net`)
      services:
        - kind: Service
          name: local-ai-service
          namespace: local-ai
          port: 8080
  tls:
    secretName: ig-ingtra-net-tls
