manifests/traefik-configs/longhorn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.ig.ingtra.net`)
      services:
        - kind: Service
          name: longhorn-frontend
          namespace: longhorn-system
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
