manifests/traefik-configs/mlserver.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mlserver
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mlserver.ig.ingtra.net`)
      services:
        - kind: Service
          name: mlserver
          namespace: mlserver
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
