manifests/traefik-configs/motorcoach.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: motorcoach
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`motorcoach.ig.ingtra.net`)
      services:
        - kind: Service
          name: motorcoach
          namespace: nriy
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
