manifests/traefik-configs/naraninyeo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: naraninyeo-handler
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`naraninyeo-handler.ig.ingtra.net`)
      services:
        - name: naraninyeo-main-ks
          port: 443
          scheme: https
          passHostHeader: false
          weight: 7
        - name: naraninyeo-develop-ks
          port: 443
          scheme: https
          passHostHeader: false
          weight: 2
  tls:
    secretName: ig-ingtra-net-tls
---
apiVersion: v1
kind: Service
metadata:
  name: naraninyeo-main-ks
spec:
  type: ExternalName
  externalName: naraninyeo-main.ks.ingtra.net
---
apiVersion: v1
kind: Service
metadata:
  name: naraninyeo-develop-ks
spec:
  type: ExternalName
  externalName: naraninyeo-develop.ks.ingtra.net
