manifests/traefik-configs/nessie.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nessie
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nessie.ig.ingtra.net`)
      services:
        - kind: Service
          name: nessie
          namespace: nessie
          port: 19120
  tls:
    secretName: ig-ingtra-net-tls
