manifests/traefik-configs/not-foundry.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: not-foundry
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`not-foundry.ig.ingtra.net`)
      services:
        - kind: Service
          name: not-foundry
          namespace: not-foundry
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
