manifests/traefik-configs/nuclio.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nuclio
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nuclio.ig.ingtra.net`)
      services:
        - kind: Service
          name: nuclio-dashboard
          namespace: nuclio
          port: 8070
  tls:
    secretName: ig-ingtra-net-tls
