manifests/traefik-configs/ollama.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ollama.ig.ingtra.net`)
      services:
        - kind: Service
          name: ollama
          namespace: ollama
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
