manifests/traefik-configs/omniamni.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omniamni
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`omniamni.ig.ingtra.net`)
      services:
        - kind: Service
          name: omniamni
          namespace: omniamni
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
