manifests/traefik-configs/prefect.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prefect
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prefect.ig.ingtra.net`)
      services:
        - kind: Service
          name: prefect-server
          namespace: prefect
          port: 4200
  tls:
    secretName: ig-ingtra-net-tls
