manifests/traefik-configs/seldon-mesh.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seldon-mesh
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`seldon-mesh.ig.ingtra.net`)
      services:
        - kind: Service
          name: seldon-mesh
          namespace: seldon-mesh
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
