manifests/traefik-configs/skypilot.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: skypilot
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`skypilot.ig.ingtra.net`)
      services:
        - kind: Service
          name: skypilot-api-service
          namespace: skypilot
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
