manifests/traefik-configs/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.ig.ingtra.net`)
      services:
        - kind: Service
          name: traefik-admin
          namespace: traefik
          port: 9000
  tls:
    secretName: ig-ingtra-net-tls
