manifests/traefik-configs/trino.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trino
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`trino.ig.ingtra.net`)
      services:
        - kind: Service
          name: trino
          namespace: trino
          port: 8080
  tls:
    secretName: ig-ingtra-net-tls
