manifests/traefik-configs/zenml.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zenml
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`zenml.ig.ingtra.net`)
      services:
        - kind: Service
          name: zenml
          namespace: zenml
          port: 80
  tls:
    secretName: ig-ingtra-net-tls
